refactor for 4.0